--- a/SAE - Portfolio 1.csproj
+++ b/SAE - Portfolio 1.csproj
@@ -8,4 +8,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="MonsterFight\" />
+    <Folder Include="AVLTree\" />
+  </ItemGroup>
+
 </Project>
