--- a/SAE - Portfolio 1.csproj
+++ b/SAE - Portfolio 1.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>SAE___Portfolio_1</RootNamespace>
+    <RootNamespace>Portfolio</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
